# CyclopsHGT

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  predict_indications.sh  pyproject.toml
docs/: PREDICTION.md
input_graphs/: .gitkeep
run_scripts/: cyclops0.sh  cyclops1.sh  cyclops2.sh  cyclops3.sh
src/: analyze_false_positives.py  data_split.py  evaluate_predictions.py  find_non_indication_treats.py  graph_loader.py  main.py  model.py  predict.py  train.py
tests/: test_data_pipeline.py  test_data_split.py  test_dense_graph_skip.py  test_many_edge_types.py  test_model_gpu.py  test_model_homogeneous.py  test_model_predict.py  test_node_id_mapping.py  test_real_data_gpu.py  test_train_loop.py
